third_party/move/move-compiler-v2/tests/more-v1/liveness/dead_refs_branch_both_invalid.exp

Diagnostics:
error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_both_invalid.move:10:9
   │
 4 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
10 │         _ = x;
   │         ^ copy attempted here
11 │         _ = move x;
12 │         *x_ref = 0;
   │         ---------- conflicting reference `x_ref` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_both_invalid.move:11:13
   │
 4 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
11 │         _ = move x;
   │             ^^^^^^ move attempted here
12 │         *x_ref = 0;
   │         ---------- conflicting reference `x_ref` used here

error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_both_invalid.move:23:9
   │
17 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
23 │         _ = x;
   │         ^ copy attempted here
24 │         _ = move x;
25 │         _ = *x_ref;
   │             ------ conflicting reference `x_ref` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_both_invalid.move:24:13
   │
17 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
24 │         _ = move x;
   │             ^^^^^^ move attempted here
25 │         _ = *x_ref;
   │             ------ conflicting reference `x_ref` used here
